# cfractions

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  requirements-setup.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
cfractions/: __init__.py  __init__.pyi  _fractions.py  base.py
src/: cfractions.c  main.cpp
tests/: conftest.py  utils.py
tests/base_tests/fraction_tests/: strategies.py  test_eq.py  test_initialization.py  test_repr.py
tests/fraction_tests/: strategies.py  test___abs__.py  test___add__.py  test___bool__.py  test___ceil__.py  test___copy__.py  test___divmod__.py  test___eq__.py  test___float__.py  test___floor__.py  test___floordiv__.py  test___ge__.py  test___gt__.py  test___hash__.py  test___int__.py  test___le__.py  test___lt__.py  test___mod__.py  test___module__.py  test___mul__.py  test___neg__.py  test___pos__.py  test___pow__.py  test___radd__.py  test___rdivmod__.py  test___repr__.py  test___rfloordiv__.py  test___rmod__.py  test___rmul__.py  test___round__.py  test___rpow__.py  test___rsub__.py  test___rtruediv__.py  test___str__.py  test___sub__.py  test___truediv__.py  test___trunc__.py  test_abs.py  test_add.py  test_as_integer_ratio.py  (+38 more)
