[project]
name = "cfractions"
authors = [{ name = "Azat Ibrakov", email = "azatibrakov@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.11.0",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "hypothesis>=6.100.1,<7.0",
    "pytest>=8.1.2,<9.0"
]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["cfractions"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-future-annotations
    "FA",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
]
ignore = [
    "E203", # Whitespace before ':'
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
relative-imports-order = "closest-to-furthest"
split-on-trailing-comma = false

[tool.setuptools.dynamic]
version = { attr = "cfractions.__version__" }
